infrastructure/security/traefik-auth/ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-auth
  namespace: traefik-system
  labels:
    app: traefik-auth
    name: traefik-auth
spec:
  selector:
    matchLabels:
      app: traefik-auth
      task: traefik-auth
  template:
    metadata:
      labels:
        app: traefik-auth
        task: traefik-auth
    spec:
      containers:
        - name: traefik-auth
          image: thomseddon/traefik-forward-auth:2
          ports:
            - containerPort: 4181
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-auth
  namespace: traefik-system
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4181
  selector:
    app: traefik-auth
    task: traefik-auth
